--- a/package.json
+++ b/package.json
@@ -8,5 +8,8 @@
         "body-parser": "1.20.3",
         "express": "4.21.2",
         "jsonwebtoken": "9.0.2"
+    },
+    "devDependencies": {
+        "typescript": "^5.7.3"
     }
 }
