--- a/package.json
+++ b/package.json
@@ -2,14 +2,23 @@
     "name": "virgeo-exercise",
     "private": true,
     "scripts": {
-        "backend": "node ./backend/server.js"
+        "backend": "node ./backend/server.js",
+        "frontend": "vite"
     },
     "dependencies": {
         "body-parser": "1.20.3",
         "express": "4.21.2",
-        "jsonwebtoken": "9.0.2"
+        "jsonwebtoken": "9.0.2",
+        "react": "^19.0.0",
+        "react-dom": "^19.0.0"
     },
     "devDependencies": {
-        "typescript": "^5.7.3"
+        "@types/node": "^22.10.5",
+        "@types/react": "^19.0.4",
+        "@types/react-dom": "^19.0.2",
+        "@vitejs/plugin-react": "^4.3.4",
+        "typescript": "^5.7.3",
+        "vite": "^6.0.7",
+        "vite-tsconfig-paths": "^5.1.4"
     }
 }
