--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
     "name": "virgeo-exercise",
     "private": true,
     "scripts": {
+        "start": "concurrently \"npm run backend\" \"npm run frontend\"",
         "backend": "node ./backend/server.js",
         "frontend": "vite"
     },
     "dependencies": {
         "body-parser": "1.20.3",
+        "concurrently": "^9.1.2",
         "express": "4.21.2",
         "jsonwebtoken": "9.0.2",
         "react": "^19.0.0",
