--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
-    "name": "virgeo-exercise",
+    "name": "@virgeo-exercise/app",
     "private": true,
+    "workspaces": [
+        "backend",
+        "frontend"
+    ],
     "scripts": {
-        "start": "concurrently \"npm run backend\" \"npm run frontend\"",
-        "backend": "node ./backend/server.js",
-        "frontend": "vite"
+        "start": "concurrently \"npm run start -w backend\" \"npm run start -w  frontend\""
     },
     "dependencies": {
         "body-parser": "1.20.3",
