--- a/package.json
+++ b/package.json
@@ -14,14 +14,17 @@
         "express": "4.21.2",
         "jsonwebtoken": "9.0.2",
         "react": "^19.0.0",
-        "react-dom": "^19.0.0"
+        "react-dom": "^19.0.0",
+        "sanitize.css": "^13.0.0"
     },
     "devDependencies": {
         "@types/node": "^22.10.5",
         "@types/react": "^19.0.4",
         "@types/react-dom": "^19.0.2",
         "@vitejs/plugin-react": "^4.3.4",
+        "sass": "^1.83.1",
         "typescript": "^5.7.3",
+        "typescript-plugin-css-modules": "^5.1.0",
         "vite": "^6.0.7",
         "vite-tsconfig-paths": "^5.1.4"
     }
