--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
         "concurrently": "^9.1.2",
         "express": "4.21.2",
         "jsonwebtoken": "9.0.2",
+        "leaflet": "^1.9.4",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
+        "react-leaflet": "^5.0.0-rc.2",
         "sanitize.css": "^13.0.0"
     },
     "devDependencies": {
+        "@types/leaflet": "^1.9.16",
         "@types/node": "^22.10.5",
         "@types/react": "^19.0.4",
         "@types/react-dom": "^19.0.2",
