--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "express": "4.21.2",
         "jsonwebtoken": "9.0.2",
         "leaflet": "^1.9.4",
+        "leaflet-gesture-handling": "^1.2.2",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
         "react-leaflet": "^5.0.0-rc.2",
