--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
         "frontend"
     ],
     "scripts": {
-        "start": "concurrently \"npm run start -w backend\" \"npm run start -w  frontend\""
+        "start": "concurrently \"npm run start -w backend\" \"npm run start -w  frontend\"",
+        "test": "npm run test -w frontend",
+        "test:watch": "npm run test:watch -w frontend"
     },
     "dependencies": {
         "body-parser": "1.20.3",
@@ -22,12 +24,19 @@
         "sanitize.css": "^13.0.0"
     },
     "devDependencies": {
+        "@testing-library/jest-dom": "^6.6.3",
+        "@testing-library/react": "^16.1.0",
+        "@testing-library/user-event": "^14.5.2",
+        "@types/jest": "^29.5.14",
         "@types/leaflet": "^1.9.16",
         "@types/node": "^22.10.5",
         "@types/react": "^19.0.4",
         "@types/react-dom": "^19.0.2",
         "@vitejs/plugin-react": "^4.3.4",
+        "jest": "^29.7.0",
+        "jest-environment-jsdom": "^29.7.0",
         "sass": "^1.83.1",
+        "ts-jest": "^29.2.5",
         "typescript": "^5.7.3",
         "typescript-plugin-css-modules": "^5.1.0",
         "vite": "^6.0.7",
