--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "jest-environment-jsdom": "^29.7.0",
         "sass": "^1.83.1",
         "ts-jest": "^29.2.5",
+        "ts-node": "^10.9.2",
         "typescript": "^5.7.3",
         "typescript-plugin-css-modules": "^5.1.0",
         "vite": "^6.0.7",
