--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
         "react-leaflet": "^5.0.0-rc.2",
+        "react-leaflet-markercluster": "^5.0.0-rc.0",
         "react-router": "^7.1.1",
         "sanitize.css": "^13.0.0"
     },
