--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,9 +9,11 @@
     "module": "ESNext",
     "moduleResolution": "Bundler",
     "esModuleInterop": true,
+    "skipLibCheck": true,
     /** type checking options **/
     "strict": true,
-    "types": ["jest", "node", "react"],
+    "types": ["jest", "node", "react", "scss"],
+    "typeRoots": ["./node_modules/@types", "./types"],
     /** jsx options **/
     "jsx": "react-jsx",
     /** plugins **/
