--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
     // Enables intellisense for sass modules via typescript-plugin-css-modules
     "typescript.tsdk": "node_modules/typescript/lib",
+    "jest.rootPath": "frontend",
 }
