--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
     "name": "@virgeo-exercise/app",
     "private": true,
+    "engines": {
+        "node": ">=20.0.0"
+    },
     "workspaces": [
         "backend",
         "frontend"
