--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
         "typescript": "^5.7.3",
         "typescript-plugin-css-modules": "^5.1.0",
         "vite": "^6.0.7",
+        "vite-plugin-babel": "^1.3.0",
         "vite-tsconfig-paths": "^5.1.4"
     }
 }
