--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
         "start": "concurrently \"npm run start -w backend\" \"npm run start -w frontend\"",
         "build": "npm run build -w frontend",
         "preview": "concurrently \"npm run start -w backend\" \"npm run preview -w frontend\"",
-        "test": "npm run test -w frontend"
+        "test": "npm run test -w frontend",
+        "lint": "eslint",
+        "format": "npm run lint -- --fix"
     },
     "dependencies": {
         "body-parser": "1.20.3",
@@ -34,6 +36,7 @@
         "@babel/preset-react": "^7.26.3",
         "@babel/preset-typescript": "^7.26.0",
         "@fetch-mock/jest": "^0.2.7",
+        "@stylistic/eslint-plugin": "^2.13.0",
         "@testing-library/jest-dom": "^6.6.3",
         "@testing-library/react": "^16.1.0",
         "@testing-library/user-event": "^14.5.2",
@@ -44,13 +47,19 @@
         "@types/react-dom": "^19.0.2",
         "@vitejs/plugin-react": "^4.3.4",
         "babel-jest": "^29.7.0",
+        "eslint": "^9.18.0",
+        "eslint-plugin-import": "^2.31.0",
+        "eslint-plugin-react": "^7.37.4",
+        "eslint-plugin-react-hooks": "^5.1.0",
         "identity-obj-proxy": "^3.0.0",
         "jest": "^29.7.0",
         "jest-environment-jsdom": "^29.7.0",
+        "jiti": "^2.4.2",
         "sass": "^1.83.1",
         "ts-jest": "^29.2.5",
         "ts-node": "^10.9.2",
         "typescript": "^5.7.3",
+        "typescript-eslint": "^8.21.0",
         "typescript-plugin-css-modules": "^5.1.0",
         "vite": "^6.0.7",
         "vite-plugin-babel": "^1.3.0",
