--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
         "format": "npm run lint -- --fix"
     },
     "dependencies": {
+        "@react-three/drei": "^10.0.0-rc.0",
+        "@react-three/fiber": "^9.0.0-rc.4",
         "body-parser": "1.20.3",
         "concurrently": "^9.1.2",
         "express": "4.21.2",
