--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
         "@babel/preset-react": "^7.26.3",
         "@babel/preset-typescript": "^7.26.0",
         "@fetch-mock/jest": "^0.2.7",
+        "@react-three/test-renderer": "^9.0.0-rc.4",
         "@stylistic/eslint-plugin": "^2.13.0",
         "@testing-library/jest-dom": "^6.6.3",
         "@testing-library/react": "^16.1.0",
