--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,15 @@
         "test": "jest"
     },
     "dependencies": {
+        "@react-three/drei": "^10.0.0-rc.0",
+        "@react-three/fiber": "^9.0.0-rc.4",
+        "leaflet": "^1.9.4",
+        "leaflet-gesture-handling": "^1.2.2",
         "react": "^19.0.0",
-        "react-dom": "^19.0.0"
+        "react-dom": "^19.0.0",
+        "react-leaflet": "^5.0.0-rc.2",
+        "react-leaflet-markercluster": "^5.0.0-rc.0",
+        "react-router": "^7.1.1",
+        "sanitize.css": "^13.0.0"
     }
 }
