--- a/package.json
+++ b/package.json
@@ -17,22 +17,6 @@
         "lint": "eslint",
         "format": "npm run lint -- --fix"
     },
-    "dependencies": {
-        "@react-three/drei": "^10.0.0-rc.0",
-        "@react-three/fiber": "^9.0.0-rc.4",
-        "body-parser": "1.20.3",
-        "concurrently": "^9.1.2",
-        "express": "4.21.2",
-        "jsonwebtoken": "9.0.2",
-        "leaflet": "^1.9.4",
-        "leaflet-gesture-handling": "^1.2.2",
-        "react": "^19.0.0",
-        "react-dom": "^19.0.0",
-        "react-leaflet": "^5.0.0-rc.2",
-        "react-leaflet-markercluster": "^5.0.0-rc.0",
-        "react-router": "^7.1.1",
-        "sanitize.css": "^13.0.0"
-    },
     "devDependencies": {
         "@babel/core": "^7.26.0",
         "@babel/preset-env": "^7.26.0",
@@ -69,5 +53,10 @@
         "vite": "^6.0.7",
         "vite-plugin-babel": "^1.3.0",
         "vite-tsconfig-paths": "^5.1.4"
+    },
+    "overrides": {
+        "@react-three/test-renderer": {
+            "@react-three/fiber": "^9.0.0-rc.4"
+        }
     }
 }
