--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
         "leaflet-gesture-handling": "^1.2.2",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
+        "react-icons": "^5.4.0",
         "react-leaflet": "^5.0.0-rc.2",
         "react-leaflet-markercluster": "^5.0.0-rc.0",
         "react-router": "^7.1.1",
